# coven-runtimes

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  approve-flow-test.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  new-runtime.yml
.github/workflows/: ci.yml  notify-downstream.yml  release.yml
crates/coven-runtime-cli/: Cargo.toml
crates/coven-runtime-cli/src/: datetime.rs  main.rs  sha256.rs  template.rs
crates/coven-runtime-cli/src/commands/: mod.rs  new.rs  package.rs  registry.rs  test.rs  validate.rs
crates/coven-runtime-cli/tests/: hermes_shim.rs  registry_cli.rs  validate_cli.rs
crates/coven-runtime-registry/: Cargo.toml
crates/coven-runtime-registry/canonical/: index.json
crates/coven-runtime-registry/src/: lib.rs
crates/coven-runtime-spec/: Cargo.toml
crates/coven-runtime-spec/src/: capabilities.rs  lib.rs  manifest.rs  sandbox.rs  validate.rs
crates/coven-runtime-spec/tests/: schema_examples.rs
docs/: README.md  adoption.md  authoring.md  conformance.md  integration.md  registry.md  troubleshooting.md
examples/: claude.json  copilot.json  grok.json  opencode.json  registry-index.json
registry/runtimes/copilot/: 1.0.0.json
registry/runtimes/coven-code/: 1.0.0.json  1.0.1.json
registry/runtimes/gophermind/: 0.1.0.json
registry/runtimes/hermes/: 1.0.0.json  1.0.1.json  1.0.2.json
registry/runtimes/opencode/: 0.1.0.json
schema/: adapter-manifest.schema.json
shims/: README.md  hermes-coven
