[package]
name = "coven-runtime-cli"
version = "0.1.3"
description = "conjure — author, validate, conformance-test, and package Coven runtime adapters."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "conjure"
path = "src/main.rs"

[dependencies]
coven-runtime-spec.workspace = true
coven-runtime-registry.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
