[package]
name = "coven-runtime-spec"
version = "0.1.3"
description = "Runtime adapter manifest schema, capability model, and validation for the Coven runtime SDK."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Drift guard only: validate the shipped JSON Schema against the example
# manifests in tests. Never compiled into downstream builds of this crate.
# `default-features = false` drops remote `$ref` resolution (reqwest/hyper/
# rustls/tokio) — the schema is self-contained, so offline validation is all
# we need and it keeps the dependency-audit surface small.
jsonschema = { version = "0.46", default-features = false }
